--- a/requirements.txt
+++ b/requirements.txt
@@ -1,251 +1,6 @@
-﻿aioredis==2.0.1
-amqp==5.1.1
-annotated-doc==0.0.4
-annotated-types==0.6.0
-anyio==3.6.2
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.4.0
+﻿Django==4.1.5
 asgiref==3.6.0
-asttokens==3.0.1
-async-lru==2.1.0
-async-timeout==4.0.2
-asyncio==4.0.0
-attrs==22.2.0
-autobahn==22.12.1
-Automat==22.10.0
-babel==2.18.0
-beautifulsoup4==4.11.1
-billiard==3.6.4.0
-bitarray==3.4.2
-bitstring==4.3.1
-bleach==6.3.0
-blinker==1.9.0
-bootstrap4==0.1.0
-boto3==1.28.12
-botocore==1.31.12
-bs4==0.0.2
-celery==5.4.0
-cement==2.8.2
-certifi==2022.12.7
-cffi==1.15.1
-channels==4.0.0
-channels-redis==4.0.0
-charset-normalizer==2.0.12
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-colab-xterm==0.2.0
-colorama==0.4.3
-comm==0.2.3
-constantly==15.1.0
-contourpy==1.2.1
-crispy-bootstrap5==2024.2
-cryptography==39.0.0
-cycler==0.12.1
-daphne==4.0.0
-debugpy==1.8.20
-decorator==5.2.1
-defusedxml==0.7.1
-distlib==0.3.5
-Django==4.1.5
-django-allauth==0.54.0
-django-bootstrap4==22.3
-django-celery-results==2.5.1
-django-compat==1.0.15
-django-crispy-forms==2.3
-django-filter==24.1
-django-jquery==3.1.0
-django-timezone-field==5.0
-djangorestframework==3.14.0
-djangorestframework-jwt==1.11.0
-docutils==0.16
-ecdsa==0.19.1
-environs==9.5.0
-esp-bool-parser==0.1.3
-esp_idf_panic_decoder==1.3.0
-esptool==4.8.1
-et-xmlfile==1.1.0
-exceptiongroup==1.3.0
-executing==2.2.1
-fastapi==0.122.0
-fastjsonschema==2.21.2
-filelock==3.8.0
-finance-datareader==0.9.94
-Flask==2.3.3
-flask-cors==6.0.2
-Flask-JWT-Extended==4.7.1
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
-fonttools==4.53.1
-fqdn==1.5.1
-future==0.16.0
-geographiclib==2.0
-gevent==25.5.1
-greenlet==3.2.3
-gunicorn==20.1.0
-h11==0.16.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.9
-httptools==0.5.0
-httpx==0.28.1
-hyperframe==6.0.1
-hyperlink==21.0.0
-idna==3.4
-incremental==22.10.0
-iniconfig==2.1.0
-intelhex==2.3.0
-ipykernel==7.2.0
-ipython==8.38.0
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.6
-jmespath==0.10.0
-joblib==1.5.2
-json5==0.13.0
-jsonpointer==3.0.0
-jsonschema==4.26.0
-jsonschema-specifications==2025.9.1
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter_client==8.8.0
-jupyter_core==5.9.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.4
-jupyterlab==4.5.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.28.0
-kiwisolver==1.4.5
-kombu==5.2.4
-lark==1.3.1
-logging==0.4.9.6
-lxml==5.3.0
-MarkupSafe==3.0.2
-marshmallow==3.20.1
-matplotlib==3.9.1
-matplotlib-inline==0.2.1
-mistune==3.2.0
-module-name==0.5.1
-msgpack==1.0.4
-nbclient==0.10.4
-nbconvert==7.17.0
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==7.5.3
-notebook_shim==0.2.4
-numpy==2.2.6
-oauthlib==3.3.1
-ocpp==0.16.0
-openpyxl==3.1.1
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==23.2
-pandas==2.0.3
-pandocfilters==1.5.1
-parso==0.8.6
-path==16.10.0
-path.py==12.5.0
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==2.5.2
-pluggy==1.6.0
-priority==1.3.0
-prometheus_client==0.24.1
-prompt_toolkit==3.0.52
-psutil==7.2.2
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pydantic==1.10.13
-pyelftools==0.32
-Pygments==2.19.1
-PyJWT==2.10.1
-PyMySQL==1.0.2
-pyOpenSSL==23.0.0
-pyparsing==3.1.2
-pyrsistent==0.19.3
-pyserial==3.5
-pyslac==0.8.3
-PySocks==1.7.1
-pytest==8.4.1
-pytest-embedded==1.16.1
-pytest-embedded-idf==1.16.1
-pytest-embedded-qemu==1.16.1
-pytest-embedded-serial==1.16.1
-pytest-embedded-serial-esp==1.16.1
-python-crontab==2.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-json-logger==4.0.0
-python3-openid==3.2.0
-pytz==2022.7
-pywinpty==3.0.3
-PyYAML==5.4.1
-pyzmq==27.1.0
-qemu.qmp==0.0.3
-redis==4.4.1
-reedsolo==1.7.0
-referencing==0.37.0
-requests==2.32.5
-requests-file==2.1.0
-requests-oauthlib==2.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rfc3987-syntax==1.1.0
-rpds-py==0.30.0
-rsa==4.7.2
-s3transfer==0.6.0
-scikit-learn==1.7.2
-scipy==1.15.3
-selenium==4.34.0
-semantic-version==2.8.5
-Send2Trash==2.1.0
-service-identity==21.1.0
-six==1.14.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-SQLAlchemy==2.0.41
 sqlparse==0.4.3
-stack-data==0.6.3
-starlette==0.50.0
-supervisor==4.2.5
-termcolor==1.1.0
-terminado==0.18.1
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-tomli==2.2.1
-toposort==1.9
-tornado==6.5.4
-tqdm==4.66.5
-traitlets==5.14.3
-trio==0.30.0
-trio-websocket==0.12.2
-Twisted==24.3.0
-twisted-iocpsupport==1.0.4
-txaio==22.2.1
-typing_extensions==4.15.0
 tzdata==2022.7
-uri-template==1.3.0
-urllib3==1.26.13
-uvicorn==0.38.0
-vine==5.0.0
-virtualenv==20.16.3
-watchfiles==0.18.1
-wcwidth==0.1.9
-webcolors==25.10.0
-webdriver-manager==4.0.2
-webencodings==0.5.1
-websocket==0.2.1
-websocket-client==1.8.0
-websockets==10.4
-Werkzeug==3.1.3
-wsproto==1.2.0
-WTForms==3.2.1
-zope.event==5.1.1
-zope.interface==5.5.2
+pip>=22.0.0
+urllib3<2.0.0
