--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-﻿Django==4.1.5
-asgiref==3.6.0
-sqlparse==0.4.3
-tzdata==2022.7
+﻿Django>=4.2,<5.0
+asgiref>=3.6.0
+sqlparse>=0.4.3
+tzdata
 pip>=22.0.0
 urllib3<2.0.0
